More name changes.

--- a/examples/SentimentAnalysis/src/main/resources/webapp/default/senti/src/index.html
+++ b/examples/SentimentAnalysis/src/main/resources/webapp/default/senti/src/index.html
@@ -50,10 +50,10 @@
               <a href="/senti">Dashboard</a>
             </li>
             <li class="dropdown messages-dropdown">
-                <a href="http://localhost:9999/#/flows/sentiment:analysis/">Reactor</a>
+                <a href="http://localhost:9999/#/flows/sentiment:analysis/">CDAP</a>
             </li>
             <li class="dropdown messages-dropdown">
-                <a href="http://www.continuuity.com">Continuuity</a>
+                <a href="http://www.cask.co">Cask</a>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
