Adds a loading animation untill all the Hive tables are loaded in the UI

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -48,7 +48,11 @@
       <span class="warning-text">Experiencing connection issues.</span>
     </div>
   </div>
-
+  <div class="loading-icon hide">
+      <div class="overlay-background">
+          <img src="/assets/img/loading_new.gif" />
+      </div>
+  </div>
   <script type="text/x-handlebars" data-template-name="application">
     <div id="header">
       <div class="logo-holder left-float">
