chart add memory type, change interpolation

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -1714,7 +1714,7 @@
     <div class="tree-node">
 
       <div class="tree-chart">
-        {{view C.Embed.Chart entityIdBinding=id entityTypeBinding=type height="50" unit="bytes" listMode="true"}}
+        {{view C.Embed.Chart entityIdBinding=id entityTypeBinding=type height="50" unit="bytes" listMode="true" metrictype="memory"}}
       </div>
 
       <div class="tree-count app-list-count">{{coresLabel}}</div>
