--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -432,12 +432,8 @@
   <script type="text/x-handlebars" data-template-name="DataExploreQuery">
     <div style="clear:both"></div>
     {{#if datasets}}
-      <table class="table bordered-dataset-table">
-        <thead>
-          <th style="width: 350px">Hive Tables</th>
-          <th>Information {{selectedDataset.name}}</th>
-        </thead>
-      </table>
+      <div class="dataexplore-hivetable-title"> Hive Tables </div><!--
+    --><div class="dataexplore-information-title"> Information {{selectedDataset.name}} </div>
       <div id="query-display">        
         <div id="query-tables">
           <table class="table">
@@ -458,31 +454,34 @@
           </table>
         </div><!-- This is needed as two elements placed side-by-side using display:inline-block technique will have whitespace between actual elements.
       --><div class="table-info">
-          <div class="metadata-title table-title" {{action 'showTableProperties' on="click"}}> Table Properties </div>
-          <div class="metadata-wrapper">
-            <div class="metadata">
-              <div class="metadata-title"> Table: </div>
-              <div class="metadata-value"> {{selectedDataset.tablename}} </div>
-            </div>
-            <div class="metadata">
-              <div class="metadata-title"> Database: </div>
-              <div class="metadata-value"> {{selectedDataset.dbname}} </div>
-            </div>
-            <div class="metadata">
-              <div class="metadata-title"> Owner: </div>
-              <div class="metadata-value"> {{selectedDataset.owner}} </div>
-            </div>
-            <div class="metadata">
-              <div class="metadata-title"> Creation Time: </div>
-              <div class="metadata-value"> {{selectedDataset.creationtime}} </div>
-            </div>
+          <div id="query-schema">
+            <div class="table-title" {{action 'showTableSchema' on="click"}}> Table Schema </div>
+            {{#if selectedDataset.schema_table_empty }}
+              <div class="table-empty"> No Schema (A Table with No Schema??) </div>
+            {{ else }}
+            <table class="table" id="schema-table">
+              <thead>
+                  <th>Column Name</th>
+                  <th>Column Type</th>
+              </thead>
+              <tbody>
+              {{#each selectedDataset.schema}}
+                <tr>
+                {{#each columns}}
+                  <td>{{this}}</td>
+                {{/each}}
+                </tr>
+              {{/each}}
+              </tbody>
+            </table>
+            {{/if}}
           </div>
           <div class="query-partition">
             <div class="table-title" {{action 'showPartitionKeys' on="click"}}> Partition Keys </div>
             {{#if selectedDataset.partition_table_empty}}
             <div class="table-empty hide"> No Partition Keys </div>
             {{ else }}
-            <table class="table partition-table hide">
+            <table class="table partition-table partition-keys-info hide">
              <thead>
                   <th>Column Name</th>
                   <th>Column Type</th>
@@ -499,27 +498,28 @@
             </table>
             {{/if}}
           </div>
-          <div id="query-schema">
-            <div class="table-title" {{action 'showTableSchema' on="click"}}> Table Schema </div>
-            {{#if selectedDataset.schema_table_empty }}
-              <div class="table-empty"> No Schema (A Table with No Schema??) </div>
-            {{ else }}
-            <table class="table hide" id="schema-table">
-              <thead>
-                  <th>Column Name</th>
-                  <th>Column Type</th>
-              </thead>
+          <div class="metadata-title table-title" {{action 'showTableProperties' on="click"}}> Table Properties </div>
+          <div class="metadata-wrapper hide">
+             <table class="schema-table table-meta-info">
               <tbody>
-              {{#each selectedDataset.schema}}
                 <tr>
-                {{#each columns}}
-                  <td>{{this}}</td>
-                {{/each}}
+                  <td>Table</td>
+                  <td> {{selectedDataset.tablename}} </td>
                 </tr>
-              {{/each}}
+                <tr>
+                  <td>Database</td>
+                  <td> {{selectedDataset.dbname}} </td>
+                </tr>
+                <tr>
+                  <td>Owner</td>
+                  <td> {{selectedDataset.owner}} </td>
+                </tr>
+                <tr>
+                  <td>Creation Time</td>
+                  <td> {{selectedDataset.creationtime}} </td>
+                </tr>
               </tbody>
             </table>
-            {{/if}}
           </div>
         </div>
         <div style="clear:both"></div>
