Fixes image icons to proper size and changes the UI on hover

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -443,7 +443,7 @@
               <td class="app-list-name service-col dataset-name">
                 <!-- <a class="none-text-decoration">{{tablename}}</a> -->
                 {{#if from_dataset}}
-                  <img src="/assets/img/v2/store_icon_data_explore1.png" style="height:20px;"/>
+                  <div class="dataset-icon"> </div>
                 {{/if}}
                 <span class="app-list-status data-explore-table-name">{{tablename}}</span>
                 {{#if this.isSelected}}
