--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -226,7 +226,7 @@
                     </form>
                     </div>
                     <div>
-                      <button class="btn" disabled="true" {{action changeInstances service on="click"}}>SET</button>
+                      <button class="btn btn-blank btn-set" disabled="true" {{action changeInstances service on="click"}}>SET</button>
                     </div>
                   </div>
                 </td>
@@ -307,7 +307,7 @@
                     </form>
                   </div>
                   <div>
-                    <button class="btn" disabled="true" {{action runnableChangeInstances model runnable on="click"}}>SET</button>
+                    <button class="btn btn-blank btn-set" disabled="true" {{action runnableChangeInstances model runnable on="click"}}>SET</button>
                   </div>
                 </div>
               </td>
@@ -1213,7 +1213,7 @@
             <div style="display: inline-block; width: 50%">
               <button style="border:0;" disabled="disabled" class="btn btn-blank">Instances Requested: </button>
               {{input keyUp=keyPressed action="changeInstances" id="instancesInput" maxlength="3" class="btn btn-blank" placeholder=model.instances value=instancesInput}}
-              <button class="btn" disabled="true" {{action "changeInstances" on="click"}}>SET</button>
+              <button class="btn btn-blank btn-set" disabled="true" {{action "changeInstances" on="click"}}>SET</button>
             </div>
           </div>
           <br />
@@ -1473,12 +1473,12 @@
       <div class="panel">
       <div class="panel-head">
         <div class="panel-title">Make a Request
-          <div class="btn-group" style="float: right;display: inline-block;">
+          <div class="btn-group" style="float: right;">
             <div>
               <button style="border:0;padding-right:120px;" disabled="disabled" class="btn btn-blank">Instances Provisioned: {{actualInstances}}</button>
               <button style="border:0;" disabled="disabled" class="btn btn-blank">Instances Requested: </button>
               {{input keyUp=keyPressed action="changeInstances" id="instancesInput" maxlength="3" class="btn btn-blank" placeholder=model.instances value=instancesInput}}
-              <button class="btn" disabled="true" {{action "changeInstances" on="click"}}>SET</button>
+              <button class="btn btn-blank btn-set" disabled="true" {{action "changeInstances" on="click"}}>SET</button>
             </div>
           </div>
         </div>
